# RustAPI-examples

./: .gitignore  Cargo.toml  FEATURES.md  LEARNING_PATH.md  README.md  TROUBLESHOOTING_NOTES.md  test_handler.long-type-14933221067219836064.txt
.github/workflows/: ci.yml
01-hello-world/: Cargo.toml
01-hello-world/src/: main.rs
02-crud-api/: Cargo.toml
02-crud-api/src/: main.rs
03-jwt-auth/: Cargo.toml
03-jwt-auth/src/: main.rs
04-sse-stream/: Cargo.toml
04-sse-stream/src/: main.rs
05-mcp-server/: Cargo.toml  README.md
05-mcp-server/src/: main.rs
auth-api/: Cargo.toml  README.md
cors-test/: Cargo.toml  README.md
cors-test/src/: main.rs
crud-api/: Cargo.toml  README.md
crud-api/src/: main.rs
event-sourcing/: Cargo.toml  README.md
event-sourcing/src/: main.rs
graphql-api/: Cargo.toml  README.md
graphql-api/src/: main.rs
hello-world/: Cargo.toml  README.md
hello-world/src/: main.rs
mcp-server/: Cargo.toml  README.md
mcp-server/src/: main.rs
microservices/: Cargo.toml  README.md
microservices-advanced/: Cargo.toml  README.md
microservices-advanced/src/: order.rs  product.rs  registry.rs
microservices/src/: main.rs
middleware-chain/: Cargo.toml  README.md
middleware-chain/src/: main.rs
phase11-demo/: Cargo.toml  README.md
phase11-demo/src/: main.rs
proof-of-concept/: Cargo.toml  README.md
proof-of-concept/src/: models.rs
rate-limit-demo/: Cargo.toml  README.md
rate-limit-demo/src/: main.rs
sqlx-crud/: Cargo.toml  README.md
sqlx-crud/src/: main.rs
templates/: Cargo.toml  README.md
templates/src/: main.rs
templates/static/: style.css
templates/templates/: about.html  base.html  blog.html  contact.html  dynamic.html  index.html
toon-api/: CONTRIBUTING.md  Cargo.toml  README.md
websocket/: Cargo.toml  README.md
