[package]
name = "hello-world"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Run with: cargo run -p hello-world

[dependencies]
rustapi-rs = { version = "0.1", features = ["swagger-ui"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
