[package]
name = "crud-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# Run with: cargo run -p crud-api

[dependencies]
rustapi-rs = { version = "0.1", features = ["swagger-ui", "core-dashboard"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
