[package]
name = "auth-api"
version = "0.1.0"
edition = "2021"
publish = false
description = "Authentication example demonstrating JWT middleware"

[dependencies]
rustapi-rs = { workspace = true, features = ["jwt", "rate-limit"] }
tokio = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
