[package]
name = "crud-api"
version = "0.1.0"
edition = "2021"
publish = false
description = "CRUD API example demonstrating all RustAPI features"

[dependencies]
rustapi-rs = { workspace = true, features = ["full"] }
tokio = { workspace = true }
serde = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
