[package]
name = "event-sourcing"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = "0.1.236"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
utoipa = "4.2"
