[package]
name = "microservices-advanced"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = "0.1.236"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
utoipa = "4.2"

[[bin]]
name = "service-registry"
path = "src/registry.rs"

[[bin]]
name = "product-service"
path = "src/product.rs"

[[bin]]
name = "order-service"
path = "src/order.rs"
