[package]
name = "microservices"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = "0.1.233"
rustapi-openapi = "0.1.233"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
utoipa = "4.2"
