[package]
name = "middleware-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = { version = "0.1.233", features = ["jwt", "cors"] }
rustapi-openapi = "0.1.233"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = "4.2"
http = "1"
