[package]
name = "phase11-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rustapi-rs = { workspace = true, features = ["full"] }
rustapi-core = { workspace = true }
rustapi-macros = { workspace = true }
rustapi-extras = { workspace = true, features = [
    "timeout",
    "guard",
    "logging",
    "circuit-breaker",
    "jwt",
] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
