[package]
name = "proof-of-concept"
version = "0.1.0"
edition = "2021"
publish = false
description = "Comprehensive POC demonstrating all RustAPI features - Bookmark Manager"

[dependencies]
rustapi-rs = { workspace = true, features = ["jwt", "cors", "rate-limit"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
futures-util = { workspace = true }

[dev-dependencies]
proptest = "1.4"
