[package]
name = "proof-of-concept"
version = "0.1.0"
edition = "2021"
publish = false
description = "Comprehensive POC demonstrating all RustAPI features - Bookmark Manager"

[dependencies]
rustapi-rs = { version = "0.1.233", features = ["jwt", "cors", "rate-limit"] }
tokio = { version = "1.35", features = ["full", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = "0.18"
utoipa = "4.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
futures-util = "0.3"

[dev-dependencies]
proptest = "1.4"
