[package]
name = "sqlx-crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { workspace = true }
rustapi-extras = { workspace = true, features = ["sqlx"] }
tokio = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
utoipa = { workspace = true }
