[package]
name = "sqlx-crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { version = "0.1.233", features = ["sqlx"] }
rustapi-openapi = "0.1.233"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
utoipa = "4.2"
