[package]
name = "templates-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { version = "0.1.236", features = ["view"] }
utoipa = "4.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
