[package]
name = "templates-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { version = "0.1.233", features = ["view"] }
rustapi-openapi = "0.1.233"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
