[package]
name = "toon-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs", features = ["toon", "swagger-ui"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = "4.2"
