[package]
name = "toon-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { workspace = true, features = ["toon", "swagger-ui"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { workspace = true }
