[package]
name = "websocket-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { path = "../../crates/rustapi-rs", features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
