[package]
name = "websocket-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rustapi-rs = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
